docs/versions/7.0.0/rules/lib/builtins/configuration.mdx
<html devsite>
<head>
  <meta name="project_path" value="/_project.yaml">
  <meta name="book_path" value="/versions/7.0.0/_book.yaml">
</head>
<body>

<h1 class="page-title" id="modules.configuration">configuration</h1>

{% dynamic setvar source_file "src/main/java/com/google/devtools/build/lib/starlarkbuildapi/BuildConfigurationApi.java" %}
{% dynamic setvar version "7.0.0" %}
{% dynamic setvar original_path "/rules/lib/builtins/configuration" %}
{% include "_buttons.html" %}
<!-- {% raw %} -->

This object holds information about the environment in which the build is running. See the <a href='https://bazel.build/versions/7.0.0/extending/rules#configurations'>Rules page</a> for more on the general concept of configurations.

<h2>Members</h2>
<ul>
    <li>
    <a href="#coverage_enabled">coverage_enabled</a>
  </li>
      <li>
    <a href="#default_shell_env">default_shell_env</a>
  </li>
      <li>
    <a href="#host_path_separator">host_path_separator</a>
  </li>
      <li>
    <a href="#test_env">test_env</a>
  </li>
  </ul>

      <h2 id="coverage_enabled">coverage_enabled</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> configuration.coverage_enabled</pre></p>

    A boolean that tells whether code coverage is enabled for this run. Note that this does not compute whether a specific rule should be instrumented for code coverage data collection. For that, see the <a href="../builtins/ctx.html#coverage_instrumented"><code>ctx.coverage_instrumented</code></a> function.


        <h2 id="default_shell_env">default_shell_env</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/dict.html">dict</a> configuration.default_shell_env</pre></p>

    A dictionary representing the static local shell environment. It maps variables to their values (strings).


        <h2 id="host_path_separator">host_path_separator</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/string.html">string</a> configuration.host_path_separator</pre></p>

    Returns the separator for PATH environment variable, which is ':' on Unix.


        <h2 id="test_env">test_env</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/dict.html">dict</a> configuration.test_env</pre></p>

    A dictionary containing user-specified test environment variables and their values, as set by the --test_env options. DO NOT USE! This is not the complete environment!



</body>
</html>

<!-- {% endraw %} -->
