docs/versions/8.7.0/rules/lib/builtins/configuration.mdx
---
title: 'configuration'
---

This object holds information about the environment in which the build is running. See the [Rules page](https://bazel.build/versions/8.7.0/extending/rules#configurations) for more on the general concept of configurations.

## Members

* [coverage_enabled](#coverage_enabled)
* [default_shell_env](#default_shell_env)
* [host_path_separator](#host_path_separator)
* [is_tool_configuration](#is_tool_configuration)
* [short_id](#short_id)
* [test_env](#test_env)

## coverage_enabled

```
bool configuration.coverage_enabled
```

A boolean that tells whether code coverage is enabled for this run. Note that this does not compute whether a specific rule should be instrumented for code coverage data collection. For that, see the [`ctx.coverage_instrumented`](../builtins/ctx#coverage_instrumented) function.

## default_shell_env

```
dict configuration.default_shell_env
```

A dictionary representing the static local shell environment. It maps variables to their values (strings).

## host_path_separator

```
string configuration.host_path_separator
```

Returns the separator for PATH environment variable, which is ':' on Unix.

## is_tool_configuration

```
bool configuration.is_tool_configuration()
```

Returns true when building in the tool (exec) configuration.

## short_id

```
string configuration.short_id
```

A short identifier for this configuration understood by the `config` and query subcommands.

Use this to distinguish different configurations for the same target in a way that is friendly to humans and tool usage, for example in an aspect used by an IDE. Keep in mind the following caveats:

* The value may differ across Bazel versions, including patch releases.* The value encodes the value of **every** flag, including those that aren't otherwise relevant for the current target and may thus invalidate caches more frequently.

    ## test_env

    ```
    dict configuration.test_env
    ```

    A dictionary containing user-specified test environment variables and their values, as set by the --test_env options. DO NOT USE! This is not the complete environment!